Fix: when archiving/deleting current page, some whitespace remained at the top of the list

--- a/src/popup/popup.scss
+++ b/src/popup/popup.scss
@@ -235,8 +235,11 @@ body {
     // Relies on max-height since height is no longer fixed
     &.disappearing {
       max-height: 0;
+      margin-top: 0;
+      margin-bottom: 0;
       padding: 0;
       opacity: 0;
+      border-top-width: 0px;
       border-bottom-width: 0px;
     }
 
